🔧 fix(styles): adjust top position of jump links in page layout 🔧 fix(styles): comment out margin-bottom property in page hero layout 🔧 fix(styles): comment out position and bottom properties in page hero layout 🔧 fix(styles): comment out max-width property in page hero layout 🔧 fix(wp-templates): add new template for faculty archive page

--- a/src/styles/layouts/page/_pageHero.scss
+++ b/src/styles/layouts/page/_pageHero.scss
@@ -3,7 +3,7 @@
 
 .hero-w-image {
   position: relative;
-  margin-bottom: -3rem;
+  // margin-bottom: -3rem;
 
   @media (min-width: tokens.$mq-1000) {
     padding-right: tokens.$pageOffset;
@@ -40,15 +40,16 @@
     display: block;
     background: tokens.$c-white;
     z-index: tokens.$layer-2;
-    position: absolute;
-    bottom: 6em;
+    border-bottom: 1px solid tokens.$c-gray-500;
+    // position: absolute;
+    // bottom: 6em;
     width: 100%;
-    max-width: 80%;
+    // max-width: 80%;
     padding-block: clamp(1rem, 2vw, 2rem);
 
-    @media (min-width: tokens.$mq-1000) {
-      max-width: calc(80% - tokens.$pageOffset);
-    }
+    // @media (min-width: tokens.$mq-1000) {
+    //   max-width: calc(80% - tokens.$pageOffset);
+    // }
 
     h1 {
       margin: 0;
